# llm-patch

./: .gitignore  .pre-commit-config.yaml  .test_cli_output.txt  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTES.md  README.md  SECURITY.md  SPEC.md  pyproject.toml  test_gemini_output.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  new_registry_client.yml  new_source_plugin.yml
.github/instructions/: engine-boundary.instructions.md  python-style.instructions.md  tests.instructions.md  usecase-boundary.instructions.md  utils-boundary.instructions.md
.github/workflows/: ci.yml  llm-patch-publish.yml  publish.yml  release.yml
docs/: AGENTIC_AI_INTEGRATION.md  ARCHITECTURE.md  COMMUNITY.md  E2E_WALKTHROUGH.md  EXTENDING.md  LIMITATIONS.md  QUICKSTART.md  REGISTRY_PROTOCOL.md  ROADMAP.md  SERVER_ARCHITECTURE.md  USAGE.md  wiki_schema.md
docs/adr/: 0000-template.md  0001-uv-workspace.md  0002-layered-architecture.md  0003-public-api-policy.md  0004-testing-strategy.md  0005-engine-shared-errors.md  0006-distributed-adapter-registry.md  0007-adapter-manifest-v2.md  0008-plugin-discovery.md  0009-monorepo-structural-unification.md  README.md
examples/: README.md  demo_e2e_scenario.py  research_pipeline.py  run_e2e.py  run_wiki_e2e.py  validate_adapter.py  wiki_schema.md
examples/data/papers/: attention-is-all-you-need.md
examples/demo_wiki/entities/: transformer.md
examples/demo_wiki/sources/: attention-paper.md
examples/e2e/: demo_e2e_scenario.py  research_pipeline.py  run_e2e.py  run_wiki_e2e.py
examples/quickstart/: README.md  run.ps1  run.sh
examples/quickstart/notes/: pytest-fixtures.md  react-hooks.md  tailwind-tips.md
examples/raw/papers/: gpt3-few-shot-learners.md  lora-low-rank-adaptation.md
projects/llm-patch/: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
projects/llm-patch/src/llm_patch/: __init__.py  cli.py  orchestrator.py  wiki_pipeline.py
projects/llm-patch/src/llm_patch/attach/: merger.py  model_provider.py  peft_loader.py
projects/llm-patch/src/llm_patch/cli/: __init__.py  _registry.py  adapter.py  distribute.py  doctor.py  init.py  model.py  serve.py  source.py  version.py  wiki.py
projects/llm-patch/src/llm_patch/core/: config.py  interfaces.py  models.py  plugins.py  project_config.py
projects/llm-patch/src/llm_patch/generators/: sakana_t2l.py
projects/llm-patch/src/llm_patch/mcp/: server.py
projects/llm-patch/src/llm_patch/pipelines/: use.py  wiki.py
projects/llm-patch/src/llm_patch/runtime/: __init__.py  agent.py  controller.py  preflight.py  session.py
projects/llm-patch/src/llm_patch/server/: app.py  schemas.py
projects/llm-patch/src/llm_patch/sources/: __init__.py  composite.py  http_api.py  jsonl.py  markdown.py  markdown_watcher.py  wiki.py  wiki_source.py
projects/llm-patch/src/llm_patch/storage/: __init__.py  local_safetensors.py  lru_cache.py
projects/llm-patch/tests/: conftest.py
projects/llm-patch/tests/integration/: test_cli_init_compile_roundtrip.py  test_e2e_architecture_wiki.py  test_e2e_scenario.py  test_manifest_v2_roundtrip.py  test_pipeline.py  test_wiki_e2e.py  test_wiki_pipeline.py  test_wiki_validation.py
projects/llm-patch/tests/unit/: test_adapter_manifest_v2.py  test_anthropic_agent.py  test_attach.py  test_cli_commands.py  test_cli_distribute.py  test_cli_help_lazy.py  test_cli_init_doctor.py  test_generator.py  test_lru_cache.py  test_orchestrator.py  test_pipelines.py  test_plugins.py  test_preflight.py  test_project_config.py  test_public_api.py  test_runtime.py  test_runtime_controller.py  test_server.py  test_source_composite.py  test_source_http.py  test_source_jsonl.py  test_source_pdf.py  test_sources.py  test_wiki_index.py  test_wiki_linker.py  test_wiki_manager.py  test_wiki_obsidian.py  test_wiki_page.py  test_wiki_schema.py
projects/shared-utils/: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
projects/shared-utils/tests/: test_smoke.py
projects/utils/: CHANGELOG.md  README.md  pyproject.toml
projects/utils/src/llm_patch_utils/: __init__.py  errors.py
projects/utils/tests/: test_smoke.py
projects/wiki-agent/: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
projects/wiki-agent/src/llm_patch_wiki_agent/: __init__.py  agent.py  cli.py
projects/wiki-agent/src/llm_patch_wiki_agent/daemon/: __init__.py  runner.py
projects/wiki-agent/src/llm_patch_wiki_agent/gateway/: __init__.py  app.py  deps.py  schemas.py
projects/wiki-agent/src/llm_patch_wiki_agent/mcp_server/: __init__.py  server.py
projects/wiki-agent/src/llm_patch_wiki_agent/registry/: __init__.py  metadata.py
projects/wiki-agent/src/llm_patch_wiki_agent/routing/: __init__.py  interfaces.py  metadata_router.py
projects/wiki-agent/tests/: test_smoke.py
projects/wiki-agent/tests/unit/: test_agent.py  test_cli.py  test_cli_commands.py  test_daemon.py  test_gateway.py  test_mcp_server.py  test_registry.py  test_routing.py
scripts/: run_gemini_comparison.py
src/llm_patch/: __init__.py  cli.py  orchestrator.py  wiki_pipeline.py
src/llm_patch/attach/: __init__.py  merger.py  model_provider.py  peft_loader.py
src/llm_patch/cli/: __init__.py  adapter.py  serve.py  source.py  wiki.py
src/llm_patch/core/: __init__.py  config.py  interfaces.py  models.py
src/llm_patch/generators/: __init__.py  sakana_t2l.py
src/llm_patch/mcp/: __init__.py  server.py
tests/: conftest.py
tests/integration/: test_e2e_architecture_wiki.py  test_wiki_pipeline.py  test_wiki_validation.py
tests/unit/: test_anthropic_agent.py  test_attach.py  test_cli_commands.py  test_generator.py  test_models.py  test_pipelines.py  test_runtime.py  test_server.py  test_source_composite.py  test_source_http.py  test_source_jsonl.py  test_source_pdf.py  test_storage.py  test_wiki_index.py  test_wiki_linker.py  test_wiki_log.py  test_wiki_manager.py  test_wiki_obsidian.py  test_wiki_page.py  test_wiki_schema.py
tools/: check_changelog.py  check_coverage.py  check_layering.py  scaffold_project.py
(+23 files in other folders)
