#
# llm-patch monorepo — uv workspace root
# ---------------------------------------------------------------
# This file defines the workspace and **shared tool configuration only**.
# Each project under projects/<name>/ owns its own [project] table,
# its own dependencies, and its own version. See SPEC.md for the
# governing engineering specification.
#

[project]
name = "llm-patch-workspace"
version = "0.0.0"
description = "Monorepo workspace root for the llm-patch engine and downstream use-cases. Not a publishable package."
requires-python = ">=3.11"
# This package is intentionally empty — it only exists so uv can resolve
# the workspace. Real code lives under projects/*.

[tool.uv.workspace]
members = ["projects/*"]

[tool.uv.sources]
llm-patch         = { workspace = true }
llm-patch-shared  = { workspace = true }
llm-patch-wiki-agent = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock",
    "pytest-cov",
    "httpx>=0.24",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.0",
    "typer>=0.12",
]

# ─────────────────────────────────────────────────────────────
#  Shared lint configuration (inherited by every project)
# ─────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "dist", "build", "**/__pycache__"]

[tool.ruff.lint]
# Strict baseline. Per-project pyproject files may add per-file ignores
# via [tool.ruff.lint.per-file-ignores] for grandfathered legacy code.
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "SIM",           # flake8-simplify
    "RUF",           # ruff-specific
    "TID",           # tidy imports
    "ARG",           # unused arguments
    "PTH",           # use pathlib
    "TRY",           # tryceratops
]
ignore = [
    "E501",          # line length handled by formatter
    "TRY003",        # long messages in exceptions are fine for our domain
]

[tool.ruff.lint.isort]
known-first-party = ["llm_patch", "llm_patch_shared", "llm_patch_wiki_agent"]

[tool.ruff.lint.per-file-ignores]
"examples/demo_e2e_scenario.py" = ["ARG001", "ARG002", "E402"]
"examples/research_pipeline.py" = ["ARG002", "E402"]
"examples/run_wiki_e2e.py" = ["E402", "TRY400"]
"scripts/run_gemini_comparison.py" = ["PTH123", "RUF001", "SIM115"]

[tool.ruff.format]
quote-style = "double"

# ─────────────────────────────────────────────────────────────
#  Shared mypy baseline (each project re-declares its src path)
# ─────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

# ─────────────────────────────────────────────────────────────
#  Shared pytest defaults (each project sets its own testpaths)
# ─────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
addopts = "--strict-markers -v"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

# ─────────────────────────────────────────────────────────────
#  Coverage
# ─────────────────────────────────────────────────────────────

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
