[project]
name = "llm-patch"
version = "1.0.0rc1"
description = "Instant Knowledge Internalization — Convert documents into LoRA adapter weights using Text-to-LoRA hypernetworks"
authors = [{ name = "llm-patch contributors" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["lora", "hypernetwork", "llm", "fine-tuning", "adapters"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "llm-patch-utils",
    "torch>=2.1",
    "transformers>=4.40",
    "peft>=0.12",
    "safetensors>=0.4",
    "pydantic>=2.0",
    "watchdog>=4.0",
]

[project.urls]
Homepage = "https://github.com/seismael/llm-patch"
Repository = "https://github.com/seismael/llm-patch"
Documentation = "https://github.com/seismael/llm-patch#readme"
Changelog = "https://github.com/seismael/llm-patch/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/seismael/llm-patch/issues"

[project.optional-dependencies]
wiki = ["pyyaml"]
cli = ["click>=8.0"]
mcp = ["mcp>=1.0"]
llm = ["litellm>=1.0"]
anthropic = ["anthropic>=0.40"]
pdf = ["pypdf>=4.0"]
http = ["httpx>=0.24"]
server = ["fastapi>=0.100", "uvicorn>=0.20"]
all = [
    "pyyaml",
    "click>=8.0",
    "mcp>=1.0",
    "litellm>=1.0",
    "anthropic>=0.40",
    "pypdf>=4.0",
    "httpx>=0.24",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.scripts]
llm-patch = "llm_patch.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock",
    "pytest-cov",
    "httpx>=0.24",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_patch"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "TID", "ARG", "PTH", "TRY"]
ignore = ["E501", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["E402"]
"src/llm_patch/cli/__init__.py" = ["B904"]
"src/llm_patch/cli/serve.py" = ["B904"]
"src/llm_patch/mcp/server.py" = ["B904", "E402"]
"tests/**/*.py" = ["ARG001", "ARG002", "ARG005"]
"tests/integration/test_e2e_architecture_wiki.py" = ["F841", "RUF002", "RUF012", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["llm_patch"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
# plugins = ["pydantic.mypy"]  # disabled: causes hang on this system

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "safetensors.*",
    "watchdog.*",
    "hyper_llm_modulator.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Add the workspace root so legacy integration tests can import the
# top-level ``examples`` package (the dir that lives at the repo root).
pythonpath = ["../.."]
addopts = "--strict-markers -v --basetemp=.pytest_tmp"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
